opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_pattern_bind"
bug-reports: "https://github.com/janestreet/ppx_pattern_bind/issues"
dev-repo: "git+https://github.com/janestreet/ppx_pattern_bind.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_pattern_bind/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppx_let"
  "ppxlib_jane"
  "dune"        {>= "3.17.0"}
  "ppxlib"      {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A ppx for writing fast incremental bind nodes in a pattern match"
description: "
A ppx rewriter that is intended for use with Incremental. It makes it
easier to write incremental computations using pattern-matching in a
way that causes incremental nodes to fire as little as possible.
"
